--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Varun's Website - A simple and stylish personal website">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Varun Arumugam - Personal Website</title>
+</head>
+<body>
+
+    <header>
+        <h1>Varun Arumugam</h1>
+        <nav>
+            <ul>
+                <li><a href="#section1">Section 1</a></li>
+                <li><a href="#section2">Section 2</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div id="section1" class="content-section">
+        <h2>Section 1</h2>
+        <p>This is the first section of your website content. You can add more details and information here.</p>
+        <img src="your-image.jpg" alt="Description of your image">
+    </div>
+
+    <div id="section2" class="content-section">
+        <h2>Section 2</h2>
+        <p>This is the second section of your website content. You can customize this section as per your requirements.</p>
+        <a href="https://www.example.com">Visit Example.com</a>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Your Name - All Rights Reserved</p>
+    </footer>
+
+</body>
+</html>
