--- a/index.html
+++ b/index.html
@@ -13,27 +13,22 @@
         <h1>Varun Arumugam</h1>
         <nav>
             <ul>
-                <li><a href="#section1">Section 1</a></li>
-                <li><a href="#section2">Section 2</a></li>
+                <li><a href="#section1">Personal Projects</a></li>
+                <li><a href="#section2">Interest</a></li>
             </ul>
         </nav>
     </header>
 
     <div id="section1" class="content-section">
-        <h2>Section 1</h2>
-        <p>This is the first section of your website content. You can add more details and information here.</p>
-        <img src="your-image.jpg" alt="Description of your image">
+        <h2>Personal Projects</h2>
+        <p>List of Personal Perojects:\nx86 processor - Microarchitecture\nClothes Detectore - Computer Vision\nA novel approach to multiprogramming on a Quantum Computer\n</p>
+        <img src="processor.jpeg" alt="processor">
     </div>
 
     <div id="section2" class="content-section">
-        <h2>Section 2</h2>
-        <p>This is the second section of your website content. You can customize this section as per your requirements.</p>
+        <h2>Interests</h2>
+        <p>Hello I am a 3rd year university student and am interested in computer architecture (PIM architectures), computer vision, and ML efficiency</p>
         <a href="https://www.example.com">Visit Example.com</a>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 Your Name - All Rights Reserved</p>
-    </footer>
 
 </body>
 </html>
