--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 
     <div id="section1" class="content-section">
         <h2>Personal Projects</h2>
-        <p>List of Personal Perojects:\nx86 processor - Microarchitecture\nClothes Detectore - Computer Vision\nA novel approach to multiprogramming on a Quantum Computer\n</p>
+        <p>List of Personal Perojects:\nx86 processor - Microarchitecture
+            Clothes Detector - Computer Vision
+            A novel approach to multiprogramming on a Quantum Computer</p>
         <img src="processor.jpeg" alt="processor">
     </div>
 
     <div id="section2" class="content-section">
         <h2>Interests</h2>
         <p>Hello I am a 3rd year university student and am interested in computer architecture (PIM architectures), computer vision, and ML efficiency</p>
-        <a href="https://www.example.com">Visit Example.com</a>
+        <a href="https://www.linkedin.com/in/varunarumugam/">linkedin</a>
 
 </body>
 </html>
