--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
     <div id="section1" class="content-section">
         <h2>Personal Projects</h2>
-        <p>List of Personal Perojects:\nx86 processor - Microarchitecture
-            Clothes Detector - Computer Vision
+        <p>List of Personal Perojects: <br>
+            x86 processor - Microarchitecture <br>
+            Clothes Detector - Computer Vision <br>
             A novel approach to multiprogramming on a Quantum Computer</p>
         <img src="processor.jpeg" alt="processor">
     </div>
